--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,8 @@
     <clouddebugger.version>v2-rev6-1.21.0</clouddebugger.version>
     <dataflow.version>v1b3-rev22-1.21.0</dataflow.version>
     <dataflow.proto.version>0.5.160222</dataflow.proto.version>
-    <datastore.version>v1beta2-rev1-4.0.0</datastore.version>
+    <datastore.client.version>1.0.0-beta.1</datastore.client.version>
+    <datastore.proto.version>1.0.0-beta</datastore.proto.version>
     <google-clients.version>1.21.0</google-clients.version>
     <guava.version>19.0</guava.version>
     <hamcrest.version>1.3</hamcrest.version>
