--- a/sdks/java/core/pom.xml
+++ b/sdks/java/core/pom.xml
@@ -228,6 +228,7 @@
               <artifactSet>
                 <includes>
                   <include>com.google.cloud.bigtable:bigtable-client-core</include>
+                  <include>com.google.cloud.datastore:datastore-v1beta3-proto-client</include>
                   <include>com.google.guava:guava</include>
                 </includes>
               </artifactSet>
@@ -252,6 +253,10 @@
                 <relocation>
                   <pattern>com.google.thirdparty</pattern>
                   <shadedPattern>org.apache.beam.sdk.repackaged.com.google.thirdparty</shadedPattern>
+                </relocation>
+                <relocation>
+                  <pattern>com.google.cloud.datastore.v1beta3.client</pattern>
+                  <shadedPattern>org.apache.beam.sdk.repackaged.com.google.cloud.datastore.v1beta3.client</shadedPattern>
                 </relocation>
                 <relocation>
                   <pattern>com.google.cloud.bigtable</pattern>
@@ -282,6 +287,7 @@
               <artifactSet>
                 <excludes>
                   <exclude>com.google.cloud.bigtable:bigtable-client-core</exclude>
+                  <exclude>com.google.cloud.datastore:datastore-v1beta3-proto-client</exclude>
                   <exclude>com.google.guava:guava</exclude>
                 </excludes>
               </artifactSet>
@@ -553,38 +559,15 @@
     </dependency>
 
     <dependency>
-      <groupId>com.google.apis</groupId>
-      <artifactId>google-api-services-datastore-protobuf</artifactId>
-      <version>${datastore.version}</version>
-      <exclusions>
-        <!-- Exclude an old version of guava that is being pulled
-             in by a transitive dependency of google-api-client -->
-        <exclusion>
-          <groupId>com.google.guava</groupId>
-          <artifactId>guava-jdk5</artifactId>
-        </exclusion>
-        <!-- Exclude old version of api client dependencies. -->
-        <exclusion>
-          <groupId>com.google.http-client</groupId>
-          <artifactId>google-http-client</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>com.google.api-client</groupId>
-          <artifactId>google-api-client</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>com.google.oauth-client</groupId>
-          <artifactId>google-oauth-client</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>com.google.http-client</groupId>
-          <artifactId>google-http-client-jackson</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>com.google.http-client</groupId>
-          <artifactId>google-http-client-protobuf</artifactId>
-        </exclusion>
-      </exclusions>
+      <groupId>com.google.cloud.datastore</groupId>
+      <artifactId>datastore-v1beta3-proto-client</artifactId>
+      <version>${datastore.client.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.cloud.datastore</groupId>
+      <artifactId>datastore-v1beta3-protos</artifactId>
+      <version>${datastore.proto.version}</version>
     </dependency>
 
     <dependency>
